--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <div id="game">
     <div id="score">Score: 0</div>
     <img id="bunny" src="bunny.png" alt="Bunny" style="left:50px; top:50px;">
+	<img class="carrot" src="carrot.png" alt="Carrot" style="top:200px; left:600px;">
+    <img class="carrot" src="carrot.png" alt="Carrot" style="top:200px; left:800px;"> 
+	<img class="carrot" src="carrot.png" alt="Carrot" style="top:100px; left:600px;">
+    <img class="carrot" src="carrot.png" alt="Carrot" style="top:100px; left:800px;">  
+	<img class="carrot" src="carrot.png" alt="Carrot" style="top:10px; left:600px;">
     <img class="carrot" src="carrot.png" alt="Carrot" style="top:200px; left:300px;">
     <img class="carrot" src="carrot.png" alt="Carrot" style="top:100px; left:500px;">
     <img class="carrot" src="carrot.png" alt="Carrot" style="top:300px; left:700px;">
@@ -26,21 +31,33 @@
 	<img class="carrot" src="carrot.png" alt="Carrot" style="top:600px; left:900px;">
 	<img class="carrot" src="carrot.png" alt="Carrot" style="top:500px; left:900px;">
 	<img class="carrot" src="carrot.png" alt="Carrot" style="top:10px; left:300px;">
+	<img class="carrot" src="carrot.png" alt="Carrot" style="top:300px; left:400px;">
+	<img class="cabbage" src="cabbage.png" alt="Cabbage" style="top:10px; left:800px;">
 	<img class="cabbage" src="cabbage.png" alt="Cabbage" style="top:300px; left:500px;">
 	<img class="cabbage" src="cabbage.png" alt="Cabbage" style="top:100px; left:400px;">
 	<img class="cabbage" src="cabbage.png" alt="Cabbage" style="top:300px; left:800px;">
 	<img class="cabbage" src="cabbage.png" alt="Cabbage" style="top:500px; left:700px;">
 	<img class="cabbage" src="cabbage.png" alt="Cabbage" style="top:400px; left:300px;">
 	<img class="cabbage" src="cabbage.png" alt="Cabbage" style="top:10px; left:400px;">
+	<img class="cabbage" src="cabbage.png" alt="Cabbage" style="top:300px; left:300px;">
+	<img class="cabbage" src="cabbage.png" alt="Cabbage" style="top:400px; left:700px;">
+	<img class="cabbage" src="cabbage.png" alt="Cabbage" style="top:600px; left:400px;">
+	<img class="cabbage" src="cabbage.png" alt="Cabbage" style="top:500px; left:400px;">
+	<img class="cabbage" src="cabbage.png" alt="Cabbage" style="top:300px; left:700px;">
+	<img class="dandelion" src="dandelion.png" alt="Dandelion" style="top:10px; left:900px;">
 	<img class="dandelion" src="dandelion.png" alt="Dandelion" style="top:10px; left:700px;">
 	<img class="dandelion" src="dandelion.png" alt="Dandelion" style="top:200px; left:400px;">
 	<img class="dandelion" src="dandelion.png" alt="Dandelion" style="top:500px; left:800px;">
 	<img class="dandelion" src="dandelion.png" alt="Dandelion" style="top:300px; left:600px;">
 	<img class="dandelion" src="dandelion.png" alt="Dandelion" style="top:600px; left:600px;">
+	<img class="dandelion" src="dandelion.png" alt="Dandelion" style="top:500px; left:500px;">
+	<img class="dandelion" src="dandelion.png" alt="Dandelion" style="top:400px; left:900px;">
+	<img class="lily" src="lily.png" alt="Lily" style="top:200px; left:900px;">
 	<img class="lily" src="lily.png" alt="Lily" style="top:400px; left:400px;">
 	<img class="lily" src="lily.png" alt="Lily" style="top:100px; left:700px;">
 	<img class="lily" src="lily.png" alt="Lily" style="top:10px; left:500px;">
 	<img class="lily" src="lily.png" alt="Lily" style="top:600px; left:800px;">
+	<img class="lily" src="lily.png" alt="Lily" style="top:600px; left:700px;">
 	<img id="gate" src="gate.png" alt="Gate" style="top: 600px; left: 1100px; display: none;">
     <button id="restart-btn">Restart game</button>
   </div>
