--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pixel Bunny Adventure</title>
+    <title>Bunny Adventure Game</title>
 	<link rel="stylesheet" href="style.css" />
 	</head>
 <body>
@@ -17,3 +17,4 @@
 	<script src="script.js"></script>
   </body>
   </html>
+
